-need the ability to add subtasks in project template view -in delivery style template, you need to be able to set a delivery day/week/month so tasks can land after delivery
in projects with delivery style, the delivery week should also be settable and moveable, as delivery date might change, and it should be possible here too to have tasks after delivery
